--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -124,11 +124,25 @@
     <string name="main_screen_text_color_summary">El color del texto de la pantalla principal</string>
     <string name="menu">Menú</string>
     <string name="menu_hourly">Ampliado</string>
+    <string name="menu_indices">Estilo de vida</string>
     <string name="menu_locations">Ciudades</string>
+    <string name="menu_moon_phases">Fases lunares</string>
     <string name="menu_settings">Configuración</string>
     <string name="menu_trend">Tendencia</string>
     <string name="menu_update">Actualizar</string>
-    <string name="network_error">No se pudo conectar al servidor</string>
+    <string name="moon_age">Edad %s día(s)</string>
+    <string name="moon_newmoon">Luna nueva</string>
+    <string name="moon_waxingcrescent">Luna creciente</string>
+    <string name="moon_firstquarter">Cuarto creciente</string>
+    <string name="moon_waxinggibbous">Luna gibosa creciente</string>
+    <string name="moon_full">Luna llena</string>
+    <string name="moon_waninggibbous">Luna gibosa menguante</string>
+    <string name="moon_lastquarter">Cuarto menguante</string>
+    <string name="moon_waningcrescent">Luna menguante</string>
+    <string name="moon_current_view">Vendo: %s</string>
+    <string name="moon_illuminated">Iluminación</string>
+    <string name="moon_since">Inicio</string>
+    <string name="network_error">No se pudo conectar al servidor\nComprueba tus ajustes de red.</string>
     <string name="new_version">Nueva versión</string>
     <string name="no_provider">Fallo al posicionar\nEscoge tu ubicación manualmente</string>
     <string name="no_weather_provider">No se ha encontrado el proveedor de climatología MIUI</string>
@@ -167,10 +181,13 @@
     <string name="settings_click_actions">Acciones al tocar</string>
     <string name="settings_check_updates_summary">Buscar actualizaciones al iniciar la aplicación</string>
     <string name="settings_check_updates_title">Buscar actualizaciones</string>
+    <string name="settings_hide_bottom_bar_title">Ocultar barra de botones</string>
+    <string name="settings_hide_bottom_bar_summary">Toca la pantalla para ocultar la barra de botones inferior</string>
     <string name="settings_miui_support_summary">Activar para dar soporte a los widgets nativos de MIUI Weather</string>
     <string name="settings_miui_support_title">Soporte MIUI widgets</string>
     <string name="settings_miui_v5_summary">Activar sólo si usa una ROM MIUI v5</string>
     <string name="settings_miui_v5_title">ROM MIUI v5</string>
+    <string name="settings_moon_phases_title">Fases lunares</string>
     <string name="settings_notification_color_title">Color de la barra de estado</string>
     <string name="settings_notification_summary">Muestra las condiciones actuales del tiempo en el área de notificación</string>
     <string name="settings_notification_text_color_summary">Texto y color iconos de las notificaciones</string>
@@ -284,4 +301,16 @@
     <string name="wind_w">O</string>
     <string name="wind_wnw">O-NO</string>
     <string name="wind_wsw">O-SO</string>
+    <string name="zodiac_aries">Aries</string>
+    <string name="zodiac_taurus">Tauro</string>
+    <string name="zodiac_gemini">Géminis</string>
+    <string name="zodiac_cancer">Cáncer</string>
+    <string name="zodiac_leo">Leo</string>
+    <string name="zodiac_virgo">Virgo</string>
+    <string name="zodiac_libra">Libra</string>
+    <string name="zodiac_scorpio">Escorpio</string>
+    <string name="zodiac_sagittarius">Sagitario</string>
+    <string name="zodiac_capricorn">Capricornio</string>
+    <string name="zodiac_aquarius">Aquario</string>
+    <string name="zodiac_pisces">Piscis</string>
 </resources>
