--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -121,14 +121,28 @@
     <string name="main_screen_text_color_summary">A főképernyő adatainak szöveg színe</string>
     <string name="menu">Menü</string>
     <string name="menu_hourly">Óránként</string>
+    <string name="menu_indices">Életmód</string>
     <string name="menu_locations">Helyszínek</string>
+    <string name="menu_moon_phases">Holdfázis</string>
     <string name="menu_settings">Beállítások</string>
     <string name="menu_trend">Előrejelzés</string>
     <string name="menu_update">Frissítés</string>
+    <string name="moon_age">%s napja</string>
+    <string name="moon_newmoon">Újhold</string>
+    <string name="moon_waxingcrescent">Növekvő hold</string>
+    <string name="moon_firstquarter">Első negyed</string>
+    <string name="moon_waxinggibbous">Növekvő hold</string>
+    <string name="moon_full">Telihold</string>
+    <string name="moon_waninggibbous">Fogyó hold</string>
+    <string name="moon_lastquarter">Utolsó negyed</string>
+    <string name="moon_waningcrescent">Fogyó félhold</string>
+    <string name="moon_current_view">%s nézet</string>
+    <string name="moon_illuminated">Megvilágított rész</string>
+    <string name="moon_since">mióta:</string>
     <string name="network_error">Csatlakozás sikertelen</string>
     <string name="new_version">Új verzió</string> 
-    <string name="no_provider">Helymeghatározás sikertelen - a helyszínt válassza ki kézzel</string>
-    <string name="no_weather_provider">No MIUI weather provider found</string>
+    <string name="no_provider">Helymeghatározás sikertelen - a helyszínt válassza ki manuálisan</string>
+    <string name="no_weather_provider">Nincs elérhető MIUI időjárás szolgáltató</string>
     <string name="not_now">Most nem</string> 
     <string name="press_color_to_apply">Alkalmazáshoz nyomja meg a színt</string>
     <string name="pressure_units">Légnyomás mértékegysége</string> 
@@ -163,10 +177,13 @@
     <string name="settings_click_actions">Kattintási műveletek</string>
     <string name="settings_check_updates_summary">Frissítések ellenőrzése indításkor</string>
     <string name="settings_check_updates_title">Frissítések ellenőrzése</string>
+    <string name="settings_hide_bottom_bar_title">Alsó sáv elrejtése</string>
+    <string name="settings_hide_bottom_bar_summary">Érintse meg a képernyőt a gombok elrejtéséhez</string>
     <string name="settings_miui_support_summary">A MIUI natív widgetekhez kapcsolja be</string>
     <string name="settings_miui_support_title">MIUI widgetek</string>
     <string name="settings_miui_v5_summary">MIUI v5 ROM-hoz kapcsolja be</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>    
+    <string name="settings_moon_phases_title">Holdfázis</string>
     <string name="settings_notification_color_title">Értesítősáv színe</string>
     <string name="settings_notification_summary">Időjárás kijelzés az értesítési területen</string>
     <string name="settings_notification_text_color_summary">Az értesítő szöveg és ikonok színe</string>
@@ -273,4 +290,16 @@
     <string name="wind_w">NY</string>
     <string name="wind_wnw">NY-DNY</string>
     <string name="wind_wsw">NY-DNY</string>
+    <string name="zodiac_aries">Kos</string>
+    <string name="zodiac_taurus">Bika</string>
+    <string name="zodiac_gemini">Ikrek</string>
+    <string name="zodiac_cancer">Rák</string>
+    <string name="zodiac_leo">Oroszlán</string>
+    <string name="zodiac_virgo">Szűz</string>
+    <string name="zodiac_libra">Mérleg</string>
+    <string name="zodiac_scorpio">Skorpió</string>
+    <string name="zodiac_sagittarius">Nyilas</string>
+    <string name="zodiac_capricorn">Bak</string>
+    <string name="zodiac_aquarius">Vízöntő</string>
+    <string name="zodiac_pisces">Halak</string>
 </resources>
