--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -122,10 +122,24 @@
     <string name="main_screen_text_color_summary">Tekstfarven på vejr info</string>
     <string name="menu">Menu</string>
     <string name="menu_hourly">Time</string>
+    <string name="menu_indices">Livsstil</string>
     <string name="menu_locations">Steder</string>
+    <string name="menu_moon_phases">Måne Faser</string>
     <string name="menu_settings">Indstillinger</string>
-    <string name="menu_trend">Trend</string>
+    <string name="menu_trend">Uge</string>
     <string name="menu_update">Opdater</string>
+    <string name="moon_age">%s dage gammel</string>
+    <string name="moon_newmoon">Nymåne</string>
+    <string name="moon_waxingcrescent">Tiltagende halvmåne</string>
+    <string name="moon_firstquarter">Tiltagende første kvartal</string>
+    <string name="moon_waxinggibbous">Tiltagende mod fuldmåne</string>
+    <string name="moon_full">Fuldmåne</string>
+    <string name="moon_waninggibbous">Aftagende</string>
+    <string name="moon_lastquarter">Aftagende sidste kvartal</string>
+    <string name="moon_waningcrescent">Aftagende halvmåne</string>
+    <string name="moon_current_view">Visningstilstand: %s</string>
+    <string name="moon_illuminated">Oplyst</string>
+    <string name="moon_since">Siden</string>
     <string name="network_error">Kunne ikke forbinde til serveren</string>
     <string name="new_version">Ny version</string>
     <string name="no_provider">Lokalisering mislykkedes\nIndstil placering manuelt</string>
@@ -165,10 +179,13 @@
     <string name="settings_click_actions">Tryk handlinger</string>
     <string name="settings_check_updates_summary">Kontroller for opdateringer ved app start</string>
     <string name="settings_check_updates_title">Kontroller for opdateringer</string>
+    <string name="settings_hide_bottom_bar_title">Skjul bundknapper</string>
+    <string name="settings_hide_bottom_bar_summary">Tryk på skærmen for at skjule knapper i bunden</string>
     <string name="settings_miui_support_summary">Slå til for understøttelse af MIUI widgets</string>
     <string name="settings_miui_support_title">MIUI widgets understøttelse</string>
     <string name="settings_miui_v5_summary">Slå til hvis du bruger MIUI v5 ROM</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
+    <string name="settings_moon_phases_title">Månefaser</string>
     <string name="settings_notification_color_title">Statuslinie symbol farve</string>
     <string name="settings_notification_summary">Vis vejr info i notifikations området</string>
     <string name="settings_notification_text_color_summary">Notifikation ikon- og tekstfarve</string>
@@ -282,4 +299,16 @@
     <string name="wind_w">V</string>
     <string name="wind_wnw">V-NV</string>
     <string name="wind_wsw">V-SV</string>
+    <string name="zodiac_aries">Vædderen</string>
+    <string name="zodiac_taurus">Tyren</string>
+    <string name="zodiac_gemini">Tvillingerne</string>
+    <string name="zodiac_cancer">Krebsen</string>
+    <string name="zodiac_leo">Løven</string>
+    <string name="zodiac_virgo">Jomfruen</string>
+    <string name="zodiac_libra">Vægten</string>
+    <string name="zodiac_scorpio">Skorpionen</string>
+    <string name="zodiac_sagittarius">Skytten</string>
+    <string name="zodiac_capricorn">Stenbukken</string>
+    <string name="zodiac_aquarius">Vandmanden</string>
+    <string name="zodiac_pisces">Fisken</string>
 </resources>
