--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -167,15 +167,15 @@
     <string name="settings_category_animation_sum">Configurar las animaciones del clima y la política descarga de las animaciones</string>
     <string name="settings_category_app_update">Actualización de la aplicación</string>
     <string name="settings_category_appearance">General</string>
-    <string name="settings_category_appearance_sum">Configurar unidades de medida, color de texto, etc</string>
+    <string name="settings_category_appearance_sum">Configurar unidades de medida, color del texto, etc</string>
     <string name="settings_category_forecast_update">Actualización de predicciones</string>
     <string name="settings_category_miui">MIUI ROMs</string>
     <string name="settings_category_miui_sum">Configurar opciones MIUI (activar/desactivar, borrar datos, etc)</string>
     <string name="settings_category_network">Configuración de red</string>
     <string name="settings_category_notification">Notificaciones</string>
-    <string name="settings_category_notification_sum">Configurar las notificaciones del programa</string>
+    <string name="settings_category_notification_sum">Configurar las notificaciones de la aplicación</string>
     <string name="settings_category_update">Actualizaciones</string>
-    <string name="settings_category_update_sum">Configurar las actualizaciones del clima y del programa</string>
+    <string name="settings_category_update_sum">Configurar las actualizaciones del clima y de la aplicación</string>
     <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Configurar el aspecto y acciones de los widgets</string>
     <string name="settings_click_actions">Acciones al tocar</string>
