--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="about_author">Author:</string>
-    <string name="about_blizzard">Blizzard</string>
+    <string name="about_version">Version:</string>
+    <string name="about_sunny">Sunny</string>
     <string name="about_cloudy">Cloudy</string>
-    <string name="about_cloudy_night">Cloudy Night</string>
-    <string name="about_dust">Dust</string>
+    <string name="about_overcast">Overcast</string>
     <string name="about_fog">Fog</string>
+    <string name="about_rainstorm">Rainstorm</string>
+    <string name="about_t_storms">T-storms</string>
+    <string name="about_rain_showers">Rain Showers</string>
+    <string name="about_heavy_rain">Heavy Rain</string>
+    <string name="about_moderate_rain">Moderate Rain</string>
+    <string name="about_light_rain">Light Rain</string>
+    <string name="about_sleet">Sleet</string>
+    <string name="about_blizzard">Blizzard</string>
+    <string name="about_snow_showers">Snow Showers</string>
+    <string name="about_heavy_snow">Heavy Snow</string>
+    <string name="about_moderate_snow">Moderate Snow</string>
+    <string name="about_light_snow">Light Snow</string>
+    <string name="about_dust">Dust</string>
+    <string name="about_hailstone">Hailstone</string>
+    <string name="about_haze">Haze</string>
     <string name="about_for_translators">For Translators:</string>
     <string name="about_for_translators_text">If you want to help with translation this app into your language, just go to the my github page (using the button above) to see all resources</string>
-    <string name="about_hailstone">Hailstone</string>
-    <string name="about_heavy_snow">Snow</string>
-    <string name="about_light_rain">Light Rain</string>
-    <string name="about_light_snow">Light Snow</string>
-    <string name="about_overcast">Overcast</string>
-    <string name="about_rain">Rain</string>
-    <string name="about_rainstorm">Rainstorm</string>
-    <string name="about_showers">Showers</string>
-    <string name="about_sleet">Sleet</string>
-    <string name="about_snow">Snow</string>
     <string name="about_social">Social links:</string>
-    <string name="about_sunny">Sunny</string>
-    <string name="about_sunny_night">Sunny Night</string>
-    <string name="about_t_storms">T-storms</string>
-    <string name="about_version">Version:</string>
     <string name="animation_preview">Preview animations</string>
     <string name="app_name">Weather BZ</string>
     <string name="btn_add_location">Add Location</string>
@@ -116,7 +117,7 @@
     <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
     <string name="changelog">Changelog</string>
     <string name="just_now">Just now</string>
-    <string name="loading">Loading\u2026</string>
+<string name="loading">Loading\u2026</string>
     <string name="location_edit">Enter city name</string>
     <string name="location_gps">Current location</string>
     <string name="location_list">Locations</string>
@@ -141,8 +142,8 @@
     <string name="moon_waningcrescent">Waning crescent</string>
     <string name="moon_current_view">View mode: %s</string>
     <string name="moon_illuminated">Illuminated</string>
-    <string name="moon_since">Начиная с</string>
-    <string name="network_error">Could not connect the server.\nCheck your network settings.</string>
+    <string name="moon_since">Since</string>
+<string name="network_error">Could not connect the server.\nCheck your network settings.</string>
     <string name="new_version">New version</string>
     <string name="no_provider">Location is not available\nSelect location manually</string>
     <string name="no_weather_provider">No MIUI weather provider found</string>
@@ -246,7 +247,7 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Text Color</string>
-    <string name="updating">Updating\u2026</string>
+<string name="updating">Updating\u2026</string>
     <string name="upgrade">Upgrade</string>
     <string name="visibility_units">Visibility units</string>
     <string name="visibility_units_km">" km"</string>
