--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -6,8 +6,8 @@
     <string name="about_cloudy_night">Bulutlu gece</string>
     <string name="about_dust">Toz</string>
     <string name="about_fog">Sis</string>
-    <string name="about_for_translators">For Translators:</string>
-    <string name="about_for_translators_text">If you want to help with translation this app into your language, just go to the my github page (using the button above) to see all resources</string>
+    <string name="about_for_translators">Çevirmenler için:</string>
+    <string name="about_for_translators_text">Eğer uygulamayı kendi dilinize çevirmek isterseniz, Github sayfasında tüm kaynakları bulabilirsiniz</string>
     <string name="about_hailstone">Dolu</string>
     <string name="about_heavy_snow">Kar</string>
     <string name="about_light_rain">Hafif Yağmur</string>
@@ -43,7 +43,7 @@
     <string name="date_format_title">Tarih biçimi</string>
     <string name="date_format_mdy">MM/dd/yyyy</string>
     <string name="date_format_dmy">dd/MM/yyyy</string>
-    <string name="dialog_color_picker">renk seçici</string>
+    <string name="dialog_color_picker">Renk seçici</string>
     <string name="dlg_go_to_forecast">Tahminlere git</string>
     <string name="dlg_select_action">Eylemi seç</string>
     <string name="dlg_set_as_home">\"Ana ekran\" olarak ayarla</string>
@@ -100,7 +100,7 @@
     <string name="foreca_overcast_ts_snow">Kar fırtınası</string>
     <string name="foreca_overcast_ts_wet_snow">Islak kar fırtınası</string>
     <string name="foreca_overcast_wet_snow">Islak kar</string>
-    <string name="foreca_overcast_wet_snow_showers">Islak kar sağanak</string>
+    <string name="foreca_overcast_wet_snow_showers">Islak kar sağanağı</string>
     <string name="foreca_partly_cloudy">Parçalı bulutlu</string>
     <string name="foreca_partly_cloudy_l_rain">Hafif yağmur</string>
     <string name="foreca_partly_cloudy_l_snow">Hafif kar</string>
@@ -138,14 +138,14 @@
     <string name="moon_full">Dolunay</string>
     <string name="moon_waninggibbous">Şişkin</string>
     <string name="moon_lastquarter">Son dördün</string>
-    <string name="moon_waningcrescent">Waning crescent</string>
-    <string name="moon_current_view">View mode: %s</string>
-    <string name="moon_illuminated">Illuminated</string>
+    <string name="moon_waningcrescent">Hilal</string>
+    <string name="moon_current_view">Gösterme modu: %s</string>
+    <string name="moon_illuminated">Işıklılık</string>
     <string name="moon_since">Начиная с</string>
     <string name="network_error">Sunucuya bağlanılamadı.\nAğ ayarlarını kontrol edin.</string>
     <string name="new_version">Yeni Sürüm</string>
     <string name="no_provider">Konum kullanılamaz\nKonumu elle ayarlayın</string>
-    <string name="no_weather_provider">No MIUI weather provider found</string>
+    <string name="no_weather_provider">MIUI Hava durumu sağlayıcısı bulunamadı</string>
     <string name="not_now">Sonra</string>
     <string name="ok">Tamam</string>
     <string name="press_color_to_apply">Renge tıklayıp uygulayın</string>
@@ -252,22 +252,22 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mil"</string>
-    <string name="weather_cond_cloudy">Cloudy</string>
-    <string name="weather_cond_fog">Fog</string>
-    <string name="weather_cond_chancerain">Chance of rain</string>
-    <string name="weather_cond_lightsnow">Light snow</string>
-    <string name="weather_cond_overcast">Overcast</string>
-    <string name="weather_cond_rain">Rain</string>
-    <string name="weather_cond_rainstorm">Rainstorm</string>
-    <string name="weather_cond_sleet">Sleet</string>
-    <string name="weather_cond_snow">Snow</string>
-    <string name="weather_cond_sunny">Sunny</string>
-    <string name="weather_cond_t_storms">Thunderstorms</string>
+    <string name="weather_cond_cloudy">Bulutlu</string>
+    <string name="weather_cond_fog">Sis</string>
+    <string name="weather_cond_chancerain">Yağmur olasılığı</string>
+    <string name="weather_cond_lightsnow">Hafif kar</string>
+    <string name="weather_cond_overcast">Kapalı</string>
+    <string name="weather_cond_rain">Yağmur</string>
+    <string name="weather_cond_rainstorm">Yağmur fırtınası</string>
+    <string name="weather_cond_sleet">Karla karışık yağmur</string>
+    <string name="weather_cond_snow">Kar</string>
+    <string name="weather_cond_sunny">Açık</string>
+    <string name="weather_cond_t_storms">Gök gürültülü fırtına</string>
     <string name="weather_feel">"Hissedilen: "</string>
     <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Nem: "</string>
     <string name="weather_no_city">Şehir yok</string>
-    <string name="weather_no_conditions_data">Hava durumu verisi yok</string>
+    <string name="weather_no_conditions_data">Hava durumu verisi yok!</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Basınç: "</string>
     <string name="weather_sunrize">"GünDoğumu: "</string>
