--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about_author">Forfatter:</string>
-    <string name="about_blizzard">Snestorm</string>
-    <string name="about_cloudy">Skyet</string>
-    <string name="about_cloudy_night">Skyet Aften</string>
-    <string name="about_dust">Støv</string>
-    <string name="about_fog">Tåge</string>
-    <string name="about_for_translators">Til oversættere:</string>
-    <string name="about_for_translators_text">Hvis du vil hjælpe med oversættelsen af denne app til dit sprog, gå til github siden (anvend knappen for oven) for at se ressourcerne</string>
-    <string name="about_hailstone">Hagl</string>
-    <string name="about_heavy_snow">Sne</string>
-    <string name="about_light_rain">Let regn</string>
-    <string name="about_light_snow">Let sne</string>
-    <string name="about_overcast">Overskyet</string>
-    <string name="about_rain">Regn</string>
-    <string name="about_rainstorm">Regnstorm</string>
-    <string name="about_showers">Byger</string>
-    <string name="about_sleet">Slud</string>
-    <string name="about_snow">Sne</string>
-    <string name="about_social">Sociale links:</string>
-    <string name="about_sunny">Solrigt</string>
-    <string name="about_sunny_night">Solrig Aften</string>
-    <string name="about_t_storms">Tordenbyger</string>
+    <string name="about_author">Author:</string>
     <string name="about_version">Version:</string>
+    <string name="about_sunny">Solrigt</string>
+    <string name="about_cloudy">Skyet</string>
+    <string name="about_overcast">Overskyet</string>
+    <string name="about_fog">Tåge</string>
+    <string name="about_rainstorm">Regnstorm</string>
+    <string name="about_t_storms">Torden</string>
+    <string name="about_rain_showers">Regnbyger</string>
+    <string name="about_heavy_rain">Kraftig Regn</string>
+    <string name="about_moderate_rain">Moderat Regn</string>
+    <string name="about_light_rain">Let Regn</string>
+    <string name="about_sleet">Slud</string>
+    <string name="about_blizzard">Snestorm</string>
+    <string name="about_snow_showers">Snebyger</string>
+    <string name="about_heavy_snow">Kraftig Sne</string>
+    <string name="about_moderate_snow">Moderat Sne</string>
+    <string name="about_light_snow">Let Sne</string>
+    <string name="about_dust">Støv</string>
+    <string name="about_hailstone">Hagl</string>
+    <string name="about_haze">Dis</string>
+    <string name="about_for_translators">Til Oversættere:</string>
+    <string name="about_for_translators_text">Hvis du vil hjælpe med oversættelsen af denne app til dit sprog, gå til github siden (anvend knappen for oven) for at se ressourcerne</string>
+    <string name="about_social">Sociale links:</string>
     <string name="animation_preview">Eksempel på animationer</string>
     <string name="app_name">Vejr BZ</string>
     <string name="btn_add_location">Tilføj Placering</string>
@@ -176,6 +177,7 @@
     <string name="settings_category_update_sum">Indstillinger for auto opdatering og opdateringstid</string>
     <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Widgets udseende og tryk handlinger</string>
+    <string name="settings_citydb_provider">By Udbyder</string>
     <string name="settings_click_actions">Tryk handlinger</string>
     <string name="settings_check_updates_summary">Kontroller for opdateringer ved app start</string>
     <string name="settings_check_updates_title">Kontroller for opdateringer</string>
