--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -26,7 +26,9 @@
     <string name="about_social">Ссылки:</string>
     <string name="animation_preview">Предпросмотр анимации</string>
     <string name="app_name">Погода BZ</string>
+    <string name="applying_theme">Применение темы\u2026</string>
     <string name="btn_add_location">Добавить город</string>
+    <string name="btn_apply_theme">Применить тему</string>
     <string name="btn_delete_location">Удалить город</string>
     <string name="cancel">Отмена</string>
     <string name="clear_miui_data">Очистка базы MIUI</string>
@@ -122,11 +124,14 @@
     <string name="location_search">Поиск города</string>
     <string name="main_screen_text_color_summary">Цвет текста главного окна программы</string>
     <string name="menu">Меню</string>
+    <string name="menu_delete_theme">Удалить тему</string>
     <string name="menu_hourly">Почасовой</string>
+    <string name="menu_import">Импорт темы с SD-карты</string>
     <string name="menu_indices">Стиль жизни</string>
     <string name="menu_locations">Города</string>
     <string name="menu_moon_phases">Фазы луны</string>
     <string name="menu_settings">Настройки</string>
+    <string name="menu_themes">Темы</string>
     <string name="menu_trend">График</string>
     <string name="menu_update">Обновить</string>
     <string name="moon_age">Возраст %s дн.</string>
@@ -248,6 +253,15 @@
     <string name="temperature_units_c">Цельсий</string>
     <string name="temperature_units_f">Фаренгейт</string>
     <string name="text_color_title">Цвет текста</string>
+    <string name="theme_author">"Автор: "</string>
+    <string name="theme_date">"Дата: "</string>
+    <string name="theme_import_dialog_title">Выберите тему</string>
+    <string name="theme_import_no_filemanager">Файловый менеджер не найден.</string>
+    <string name="theme_import_not_theme">Файл не является файлом тем!</string>
+    <string name="theme_version">"Версия: "</string>
+    <string name="themes_temperature_icons">Иконки температуры</string>
+    <string name="themes_weather_animation">Анимация погоды</string>
+    <string name="themes_weather_icons">Иконки погоды</string>
     <string name="updating">Обновление</string>
     <string name="upgrade">Обновить</string>
     <string name="visibility_units">Единицы видимости</string>
