--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,7 +26,9 @@
     <string name="about_social">Social links:</string>
     <string name="animation_preview">Preview animations</string>
     <string name="app_name">Weather BZ</string>
+    <string name="applying_theme">Applying theme\u2026</string>
     <string name="btn_add_location">Add Location</string>
+    <string name="btn_apply_theme">Apply theme</string>
     <string name="btn_delete_location">Delete Location</string>
     <string name="cancel">Cancel</string>
     <string name="clear_miui_data">Clear MIUI weather data</string>
@@ -124,11 +126,14 @@
     <string name="location_search">Location search</string>
     <string name="main_screen_text_color_summary">The text color of main screen data</string>
     <string name="menu">Menu</string>
+    <string name="menu_delete_theme">Delete theme</string>
     <string name="menu_hourly">Hourly</string>
+    <string name="menu_import">Import theme form SD-card</string>
     <string name="menu_indices">Life Style</string>
     <string name="menu_locations">Locations</string>
     <string name="menu_moon_phases">Moon Phases</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_themes">Themes</string>
     <string name="menu_trend">Trend</string>
     <string name="menu_update">Update</string>
     <string name="moon_age">Age %s days</string>
@@ -248,7 +253,16 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Text Color</string>
-<string name="updating">Updating\u2026</string>
+    <string name="theme_author">"Author: "</string>
+    <string name="theme_date">"Date: "</string>
+    <string name="theme_import_dialog_title">Select a Theme to import</string>
+    <string name="theme_import_no_filemanager">Please install a File Manager.</string>
+    <string name="theme_import_not_theme">Not a theme file!</string>
+    <string name="theme_version">"Version: "</string>
+    <string name="themes_temperature_icons">Temperature Icons</string>
+    <string name="themes_weather_animation">Weather Animation</string>
+    <string name="themes_weather_icons">Weather Icons</string>
+    <string name="updating">Updating\u2026</string>
     <string name="upgrade">Upgrade</string>
     <string name="visibility_units">Visibility units</string>
     <string name="visibility_units_km">" km"</string>
