--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -26,7 +26,9 @@
     <string name="about_social">Sociale links:</string>
     <string name="animation_preview">Eksempel på animationer</string>
     <string name="app_name">Vejr BZ</string>
+    <string name="applying_theme">Anvender Tema\u2026</string>
     <string name="btn_add_location">Tilføj Placering</string>
+    <string name="btn_apply_theme">Anvend Tema</string>
     <string name="btn_delete_location">Slet Placering</string>
     <string name="cancel">Annuller</string>
     <string name="clear_miui_data">Ryd MIUI vejr data</string>
@@ -122,11 +124,14 @@
     <string name="location_search">Søg efter placering</string>
     <string name="main_screen_text_color_summary">Tekstfarven på vejr info</string>
     <string name="menu">Menu</string>
+    <string name="menu_delete_theme">Slet Tema</string>
     <string name="menu_hourly">Time</string>
+    <string name="menu_import">Importer Tema fra SD Kort</string>
     <string name="menu_indices">Livsstil</string>
     <string name="menu_locations">Steder</string>
     <string name="menu_moon_phases">Måne Faser</string>
     <string name="menu_settings">Indstillinger</string>
+    <string name="menu_themes">Temaer</string>
     <string name="menu_trend">Uge</string>
     <string name="menu_update">Opdater</string>
     <string name="moon_age">%s dage gammel</string>
@@ -238,7 +243,7 @@
     <string name="settings_widgets_widget4x2_wind_font_title">Vind</string>
     <string name="share">Del</string>
     <string name="share_content">\#WeatherBZ#</string>
-    <string name="share_weather_content">"\#WeatherBZ# Idag er %1$s's vejr %2$s, %3$s, %4$s. Opdateret %5$s."</string>
+    <string name="share_weather_content">"\#WeatherBZ# Idag er vejret i %1$s: %2$s, %3$s, %4$s. Opdateret %5$s."</string>
     <string name="share_weather_title">Del vejr data</string>
     <string name="save_screen_shot_failed">Kunne ikke gemme skærmbillede</string>
     <string name="start_time_title">Start</string>
@@ -246,6 +251,15 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Tekstfarve</string>
+    <string name="theme_author">"Forfatter: "</string>
+    <string name="theme_date">"Dato: "</string>
+    <string name="theme_import_dialog_title">Vælg Tema til importering</string>
+    <string name="theme_import_no_filemanager">Venligst installer app til filhåndtering.</string>
+    <string name="theme_import_not_theme">Ikke en tema-fil!</string>
+    <string name="theme_version">"Version: "</string>
+    <string name="themes_temperature_icons">Temperatur Ikoner</string>
+    <string name="themes_weather_animation">Vejr Animation</string>
+    <string name="themes_weather_icons">Vejr Ikoner</string>
     <string name="updating">Opdaterer\u2026</string>
     <string name="upgrade">Opgrader</string>
     <string name="visibility_units">Sigtbarhed enhed</string>
